--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -30,7 +30,7 @@
     "valider" : "Valider",
     "votrenouveaumotdepasse" : "Votre nouveau mot de passe",
     "attention" : "Attention !",
-    "etesvoussurdevouloursupprimervotrecomte" : "Etes vous sûrs de vouloir supprimer votre compte ?",
+    "etesvoussurdevouloursupprimervotrecomte" : "Êtes-vous sûr de vouloir supprimer votre compte ?",
     "annuler" : "Annuler",
     "supprimer" : "Supprimer",
     "verificationemail" : "Verification d'email",
