--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -1,6 +1,6 @@
 {
     "language": "Français",
-    "nomprojet": "CEPP",
+    "nomprojet": "Kyklos",
     "helloworld": "Bonjour le monde",
     "seconnecter": "Se connecter",
     "sinscrire": "S'inscrire",
