--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -3,7 +3,7 @@
     "@language" : {
         "description": "The current Language"
     },
-    "nomprojet": "CEPP",
+    "nomprojet": "Kyklos",
     "helloworld": "Hello World",
     "seconnecter": "Log in",
     "sinscrire": "Register",
