Traduction de ses morts

--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -51,5 +51,8 @@
     "permissioninsuffisante" : "Insufficient Permission",
     "adresseemaildejautilisee" : "Email adress already in use",
     "pasinternet" : "No internet",
-    "retour" : "Back"
+    "retour" : "Back",
+    "reglages" : "Settings",
+    "continuer" : "Continue",
+    "etape" : "Step"
 }
