--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -48,6 +48,9 @@
     "permissioninsuffisante" : "Permission insuffisante",
     "adresseemaildejautilisee" : "Adresse email déjà utilisée",
     "pasinternet" : "Pas d'internet",
-    "retour" : "Retour"
+    "retour" : "Retour",
+    "reglages" : "Réglages",
+    "continuer" : "Continuer",
+    "etape" : "Etape"
 
 }
