[Traduction] Fiche traduction

--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -1,60 +1,241 @@
 {
-    "language": "Français",
-    "nomprojet": "Kyklos",
-    "helloworld": "Bonjour le monde",
-    "seconnecter": "Se connecter",
-    "sinscrire": "S'inscrire",
-    "nomutilisateur": "Nom utilisateur",
-    "adresseemail": "Adresse email",
-    "votreadresseemail": "Votre adresse email",
-    "motdepasse": "Mot de passe",
-    "motdepasseinvalid": "Mot de passe invalide",
-    "motdepasseconfirmation": "Mot de passe de confirmation",
-    "motdepasseoublie": "Mot de passe oublié ?",
-    "nominvalide": "Nom invalide",
-    "emailinvalide": "Email invalide",
-    "motdepassetropcourt": "Mot de passe trop court",
-    "motdepasseconfirmationdifferent": "Mot de passe de confirmation différent",
-    "bienvenue": "Bienvenue !",
-    "verifierdansboiteemail": "Vérifier votre compte dans votre boite mail",
-    "renvoyerunemail": "Renvoyer un email",
-    "accueil": "Accueil",
-    "compte": "Compte",
-    "informationspersonnelles": "Informations personnelles",
-    "modifier": "Modifier",
-    "sedeconnecter": "Se déconnecter",
-    "modifierprofil": "Modifier le profil",
-    "modifiermotdepasse": "Modifier le mot de passe",
-    "supprimerlecompte" : "Supprimer le compte",
-    "confirmervotremotdepasse" : "Confirmez votre mot de passe",
-    "valider" : "Valider",
-    "votrenouveaumotdepasse" : "Votre nouveau mot de passe",
-    "attention" : "Attention !",
-    "etesvoussurdevouloursupprimervotrecomte" : "Êtes-vous sûre de vouloir supprimer votre compte ?",
-    "annuler" : "Annuler",
-    "supprimer" : "Supprimer",
-    "verificationemail" : "Verification d'email",
-    "problemedeserveur" : "Problème de serveur",
-    "pasconnecte" : "Pas connecté",
-    "utilisateurpastrouver" : "Utilisateur inconnu",
-    "tropderequetes" : "Trop de requêtes",
-    "pasdecompte": "Pas de compte ?",
-    "connexionavecgoogle" : "Connexion Google",
-    "connexionavecfacebook" : "Connexion Facebook",
-    "commencer" : "Commencer",
-    "connecteeavecgoogle" : "Connecté avec Google",
-    "connecteeavecfacebook" : "Connecté avec Facebook",
-    "motdepassemisajouravecsucces" : "Le mot de passe à été mis à jour avec succès !",
-    "permissioninsuffisante" : "Permission insuffisante",
-    "adresseemaildejautilisee" : "Adresse email déjà utilisée",
-    "pasinternet" : "Pas d'internet",
-    "retour" : "Retour",
-    "reglages" : "Réglages",
-    "continuer" : "Continuer",
-    "etape" : "Etape",
+    "language":"Français",
+    "nomprojet":"Kyklos",
+    "helloworld":"Bonjour le monde",
+    "seconnecter":"Se connecter",
+    "sinscrire":"S'inscrire",
+    "nomutilisateur":"Nom utilisateur",
+    "adresseemail":"Adresse email",
+    "votreadresseemail":"Votre adresse email",
+    "motdepasse":"Mot de passe",
+    "motdepasseinvalid":"Mot de passe invalide",
+    "motdepasseconfirmation":"Mot de passe de confirmation",
+    "motdepasseoublie":"Mot de passe oublié ?",
+    "nominvalide":"Nom invalide",
+    "emailinvalide":"Email invalide",
+    "motdepassetropcourt":"Mot de passe trop court",
+    "motdepasseconfirmationdifferent":"Mot de passe de confirmation différent",
+    "bienvenue":"Bienvenue !",
+    "verifierdansboiteemail":"Vérifier votre compte dans votre boite mail",
+    "renvoyerunemail":"Renvoyer un email",
+    "accueil":"Accueil",
+    "compte":"Compte",
+    "informationspersonnelles":"Informations personnelles",
+    "modifier":"Modifier",
+    "sedeconnecter":"Se déconnecter",
+    "modifierprofil":"Modifier le profil",
+    "modifiermotdepasse":"Modifier le mot de passe",
+    "supprimerlecompte":"Supprimer le compte",
+    "confirmervotremotdepasse":"Confirmez votre mot de passe",
+    "valider":"Valider",
+    "votrenouveaumotdepasse":"Votre nouveau mot de passe",
+    "attention":"Attention !",
+    "etesvoussurdevouloursupprimervotrecomte":"Êtes-vous sûre de vouloir supprimer votre compte ?",
+    "annuler":"Annuler",
+    "supprimer":"Supprimer",
+    "verificationemail":"Verification d'email",
+    "problemedeserveur":"Problème de serveur",
+    "pasconnecte":"Pas connecté",
+    "utilisateurpastrouver":"Utilisateur inconnu",
+    "tropderequetes":"Trop de requêtes",
+    "pasdecompte":"Pas de compte ?",
+    "connexionavecgoogle":"Connexion Google",
+    "connexionavecfacebook":"Connexion Facebook",
+    "commencer":"Commencer",
+    "connecteeavecgoogle":"Connecté avec Google",
+    "connecteeavecfacebook":"Connecté avec Facebook",
+    "motdepassemisajouravecsucces":"Le mot de passe à été mis à jour avec succès !",
+    "permissioninsuffisante":"Permission insuffisante",
+    "adresseemaildejautilisee":"Adresse email déjà utilisée",
+    "pasinternet":"Pas d'internet",
+    "retour":"Retour",
+    "reglages":"Réglages",
+    "continuer":"Continuer",
+    "etape":"Etape",
     "jailulespoints":"J’ai lu les points ci-dessus et j’ai compris que cette application m’aidera à enregistrer mes observations quotidiennes au cours des cycles menstruels, mais ne peut absolument pas me suffire telle quelle pour éviter (ou favoriser) une grossesse. Je comprends que si tel était mon objectif, je devrais impérativement suivre une formation approfondie avec une monitrice spécialisée en méthode naturelle de régulation des naissances.",
 	"etape":"Etape",
 	"principeutilisation":"Principe d'utilisation",
     "textinformation":"Cette application créée en 2020 par des médecins est :<br>",
-	"insert" : "insert"
+    "bienvenuesurkyklos":"Bienvenue sur Kyklos",
+    "settings":"Réglages",
+    "account":"Compte",
+    "username":"Pseudo",
+    "year_of_first_period":"Années des 1ères règles",
+    "date_of_birth":"Date de naissance",
+    "language":"Langue",
+    "theme":"Thème",
+    "sky_blue":"CIEL",
+    "coral":"CORAIL",
+    "edit":"Modifier",
+    "reset_application":"Réinitialiser l'application",
+    "reminder_notification":"Notification de rappel",
+    "on":"activé",
+    "off":"désactivé",
+    "other":"Autre",
+    "basic":"_guide,Principes de base",
+    "advanced_guide":"Guide avancé",
+    "app_info":"Info sur l'application",
+    "edit_profile":"Modifier le profil",
+    "username":"Nom d'utilisateur",
+    "year_of_first_period":"Année des 1eres règles",
+    "date_of_birth":"Date de naissance jj.mm.aaaa",
+    "optional_fields":"*Champs optionnels",
+    "edit":"Modifier",
+    "warning_delete_account":"Attention ! Êtes vous sûre de vouloir supprimer votre compte ?",
+    "cancel":"Annuler",
+    "delete":"Supprimer",
+    "all_your_records_will_be_permanently_deleted":"Tous vos enregistrements seront définitivement effacés !",
+    "cancel":"Annuler",
+    "delete_all":"Tout effacer",
+    "do_you_want_to_continue_the_current_cycle":"Voulez-vous continuer le cycle en cours?",
+    "new_cycle":"Nouveau cycle",
+    "continue_cycle":"Continuer cycle ...",
+    "new_observation_cycle":"Nouvelle observation - Cycle ...",
+    "date":"Date :",
+    "today":"Aujourd'hui",
+    "sensation":"SENSATION",
+    "d_letter_in_icon":"S (lettre dans icone)",
+    "dry_legend_icon_d":"Sec (légende icone S)",
+    "h":"H",
+    "humid":"Humide",
+    "w":"M",
+    "wet":"Mouillé",
+    "l":"L",
+    "slippery_lubricated":"Glissant /Lubrifié",
+    "np":"np",
+    "not_perceived":"Non perçue",
+    "other_sensation":"Autre sensation",
+    "blood":"SANG",
+    "flow_pp":"Flux ++",
+    "flow_p":"Flux +",
+    "traces":"Traces",
+    "nothing":"Rien",
+    "mucus":"MUCUS",
+    "white_or_yellow_opaque":"Opaque blanc ou jaune; épais, pâteux ou grumeleux; collant (non étirable)",
+    "opaque_with_transparency":"Opaque avec transparent; un peu étirable",
+    "cloudy_to_transparent":"Nuageux (blanc) à transparent; élastique",
+    "stringy_transparent":"Transparent filant (~blanc d'oeuf), ou très fluide (~eau)",
+    "no_visible_mucus":"Aucun mucus visible",
+    "dried_white_or_yellow_deposit":"Dépôt séché blanc ou jaune",
+    "other_observation":"Autre observation",
+    "mood":"HUMEUR",
+    "very_good":"Très bonne",
+    "good":"Bonne",
+    "no_particular_emotion_balanced":"Pas d'émotion particulière, équilibre",
+    "desire_to_be_undisturbed":"Envie d'être tranquille",
+    "mood_swings":"Humeur changeante",
+    "nervous_irritable":"Nervosité, irritable",
+    "sadness_discouragement_hypersensitivity":"Tristesse Découragement Hypersensibilité",
+    "other":"Autre",
+    "other_mood":"Autre humeur",
+    "associated_sign":"SIGNE ASSOCIE",
+    "bt":"DS (lettres dans l'icone)",
+    "breast_tension":"Tension seins (légende icone DS)",
+    "bp":"DV",
+    "belly_pain":"Douleur ventre",
+    "ha":"MT",
+    "headache":"Mal de tête",
+    "ac":"Ac",
+    "acne":"Acné",
+    "event":"EVENEMENT",
+    "fatigue":"Fatigue",
+    "stress":"Stress",
+    "personal_1":"Personnel 1",
+    "personal_2":"personnel 2",
+    "travel_unusual_schedules":"Voyage; horaires inhabituels",
+    "illness_or_fever":"Maladie ou fièvre",
+    "other_note":"Autre note",
+    "other_note":"Autre note (champ our écrire)",
+    "temperature":"TEMPéRATURE",
+    "cycle":"Cycle",
+    "display_analysis":"Afficher analyse",
+    "d_day_1_etc":"J (pour Jour 1 Jour 2 etc)",
+    "jan":"janv.",
+    "feb":"fév.",
+    "march":"mars",
+    "apr":"avr.",
+    "may":"mai",
+    "june":"juin",
+    "july":"juil",
+    "aug":"août",
+    "sept":"sept",
+    "oct":"oct",
+    "nov":"nov",
+    "dec":"déc",
+    "date":"Date  (entête de colonne)",
+    "colour":"Couleur (entête de colonne)",
+    "analysis":"Analyse (ent^te de colonne)",
+    "sensation":"Sensation (entête de colonne)",
+    "blood":"Sang (entête de colonne)",
+    "mucus":"Mucus (entête de colonne)",
+    "mood":"Humeur (entête de colonne)",
+    "event":"Evénement (entête de colonne)",
+    "observation_of_the_day":"Observation de la journée (bouton bas d'écran Cycles)",
+    "observation_of_d":"Observation du J ...",
+    "tuesday":"Mardi",
+    "wednesday":"Mercredi",
+    "thursday":"Jeudi",
+    "friday":"Vendredi",
+    "saturday":"Samedi",
+    "sunday":"Dimanche",
+    "read":"notes,Lire les notes",
+    "mark_as_peak_day":"marquer comme jour sommet",
+    "change_colour":"Modifier la couleur",
+    "mark_1":"Marquer 1",
+    "mark_2":"Marquer 2",
+    "mark_3":"Marquer 3",
+    "delete":"Effacer le ?",
+    "modify_daily_observation":"Modifier l'observation du jour",
+    "cancel_peak_day":"Annuler sommet",
+    "cancel_colour":"Annuler couleur",
+    "cancel_marking":"Annuler marquage",
+    "delete_observation":"Supprimer l'observation",
+    "cancel":"Annuler (bouton en bas du menu)",
+    "choose_colour":"Choisir une couleur",
+    "do_you_really_want_to_delete_this_observation":"Voulez-vous vraiment supprimer cette observation ?",
+    "cancel":"Annuler",
+    "observation_of_date":"Observation du (date)",
+    "other_observation":"Autre observation",
+    "other_mucus":"Autre mucus",
+    "other_event":"Autre événement",
+    "other_mood":"Autre humeur",
+    "export_as_pdf":"Exporter en PDF",
+    "analyse_group_cycle":"Analyse groupée Cycle... ( numéro du cycle)",
+    "touch_the_lines_to_be_analysed":"Toucher les lignes à analyser",
+    "cancel":"Annuler",
+    "analyse":"Analyser",
+    "analyse_observations":"Analyser (chiffre nombre de lignes sélectionnées) observations",
+    "change_colour":"Modifier couleur",
+    "mark_infertile":"Marquer infertile",
+    "delete_point_interrogation":"Effacer le '?'",
+    "cancel_colour":"Annuler couleur",
+    "cancel_infertile":"Annuler infertile",
+    "cancel_all_analysis":"Annuler toute l'analyse",
+    "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle":"Voulez-vous vraiment effacer toute l'interprétation faite sur ce cycle ?",
+    "cancel":"Annuler",
+    "delete_all":"Effacer tout",
+    "delete_cycle":"Effacer cycle (numéro du cycle)",
+    "history":"Historique",
+    "resend_cycle_3_to_2":"Renvoyer cycle 3 vers 2",
+    "maximum_cycles_at_a_time":"Maximum 15 cycles à la fois",
+    "from_cycle":"Du cycle ...",
+    "to_cycle":"au cycle ...",
+    "export_as_pdf":"Exporter en PDF",
+    "from_cycle":"du cycle ...",
+    "to_cycle":"au cycle ...",
+    "fp_abbreviation_for_1st_period":"PR (abréviation de '1ere règles', après l'année de naissance)",
+    "date":"Date  (entête de colonne)",
+    "colour":"Couleur (entête de colonne)",
+    "analysis":"Analyse (entête de colonne)",
+    "sensation":"Sensation (entête de colonne)",
+    "blood":"Sang (entête de colonne)",
+    "mucus":"Mucus (entête de colonne)",
+    "mood":"Humeur (entête de colonne)",
+    "temperature":"Température",
+    "event":"Evénement (entête de colonne)",
+    "cycle_comments":"Commentaires du cycle ... (en réalité c'est plutôt dans le sens de 'Notes')",
+    "day":"Jour",
+    "date":"Date",
+    "comments":"Commentaires",
+    "insert":"insert"
 }
