--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -1,63 +1,244 @@
 {
-    "language": "English",
-    "@language" : {
-        "description": "The current Language"
+    "language":"English",
+    "@language":{
+        "description":"The current Language"
     },
-    "nomprojet": "Kyklos",
-    "helloworld": "Hello World",
-    "seconnecter": "Log in",
-    "sinscrire": "Register",
-    "nomutilisateur": "User Name",
-    "adresseemail": "Email Address",
-    "votreadresseemail": "Your Email Adress",
-    "motdepasse": "Password",
-    "motdepasseinvalid": "Invalid Password",
-    "motdepasseconfirmation": "Password Confirmation",
-    "motdepasseoublie": "Password Forgotten ?",
-    "nominvalide": "Invalid Name",
-    "emailinvalide": "Invalid Email",
-    "motdepassetropcourt": "Short Password",
-    "motdepasseconfirmationdifferent": "Password Confirmation Different",
-    "bienvenue": "Welcome !",
-    "verifierdansboiteemail": "Please check your account in your mailbox",
-    "renvoyerunemail": "Resend an email",
-    "accueil": "Home",
-    "compte": "Account",
-    "informationspersonnelles": "Personal information",
-    "modifier": "Modify",
-    "sedeconnecter": "Log out",
-    "modifierprofil": "Edit Profil",
-    "modifiermotdepasse": "Edit Password",
-    "supprimerlecompte" : "Delete Account",
-    "confirmervotremotdepasse" : "Confirm your password",
-    "valider" : "validate",
-    "votrenouveaumotdepasse" : "Your new password",
-    "attention" : "Warning !",
-    "etesvoussurdevouloursupprimervotrecomte" : "Are you sure you want to delete your account ?",
-    "annuler" : "Cancel",
-    "supprimer" : "Delete",
-    "verificationemail" : "Email Verification",
-    "problemedeserveur" : "Server Error",
-    "pasconnecte" : "Not Authenticated",
-    "utilisateurpastrouver" : "User Not Found",
-    "tropderequetes" : "Too Many Request",
-    "pasdecompte": "Don't have an account ?",
-    "connexionavecgoogle": "Sign up with Google",
-    "connexionavecfacebook": "Sign up with Facebook",
-    "commencer" : "Start",
-    "connecteeavecgoogle" : "Connected with Google",
-    "connecteeavecfacebook" : "Connected with Facebook",
-    "motdepassemisajouravecsucces" : "The password has been successfully updated !",
-    "permissioninsuffisante" : "Insufficient Permission",
-    "adresseemaildejautilisee" : "Email adress already in use",
-    "pasinternet" : "No internet",
-    "retour" : "Back",
-    "reglages" : "Settings",
-    "continuer" : "Continue",
-    "etape" : "Step",
+    "nomprojet":"Kyklos",
+    "helloworld":"Hello World",
+    "seconnecter":"Log in",
+    "sinscrire":"Register",
+    "nomutilisateur":"User Name",
+    "adresseemail":"Email Address",
+    "votreadresseemail":"Your Email Adress",
+    "motdepasse":"Password",
+    "motdepasseinvalid":"Invalid Password",
+    "motdepasseconfirmation":"Password Confirmation",
+    "motdepasseoublie":"Password Forgotten ?",
+    "nominvalide":"Invalid Name",
+    "emailinvalide":"Invalid Email",
+    "motdepassetropcourt":"Short Password",
+    "motdepasseconfirmationdifferent":"Password Confirmation Different",
+    "bienvenue":"Welcome !",
+    "verifierdansboiteemail":"Please check your account in your mailbox",
+    "renvoyerunemail":"Resend an email",
+    "accueil":"Home",
+    "compte":"Account",
+    "informationspersonnelles":"Personal information",
+    "modifier":"Modify",
+    "sedeconnecter":"Log out",
+    "modifierprofil":"Edit Profil",
+    "modifiermotdepasse":"Edit Password",
+    "supprimerlecompte":"Delete Account",
+    "confirmervotremotdepasse":"Confirm your password",
+    "valider":"validate",
+    "votrenouveaumotdepasse":"Your new password",
+    "attention":"Warning !",
+    "etesvoussurdevouloursupprimervotrecomte":"Are you sure you want to delete your account ?",
+    "annuler":"Cancel",
+    "supprimer":"Delete",
+    "verificationemail":"Email Verification",
+    "problemedeserveur":"Server Error",
+    "pasconnecte":"Not Authenticated",
+    "utilisateurpastrouver":"User Not Found",
+    "tropderequetes":"Too Many Request",
+    "pasdecompte":"Don't have an account ?",
+    "connexionavecgoogle":"Sign up with Google",
+    "connexionavecfacebook":"Sign up with Facebook",
+    "commencer":"Start",
+    "connecteeavecgoogle":"Connected with Google",
+    "connecteeavecfacebook":"Connected with Facebook",
+    "motdepassemisajouravecsucces":"The password has been successfully updated !",
+    "permissioninsuffisante":"Insufficient Permission",
+    "adresseemaildejautilisee":"Email adress already in use",
+    "pasinternet":"No internet",
+    "retour":"Back",
+    "reglages":"Settings",
+    "continuer":"Continue",
+    "etape":"Step",
     "jailulespoints":"I have read the above points and understand that this application will help me record my daily observations during my menstrual cycles, but is in no way sufficient on its own to prevent (or promote) pregnancy. I understand that if this were my goal, I would need to undergo in-depth training with an instructor specialising in natural birth control methods.",
 	"etape":"Step",
 	"principeutilisation":"Conditions of use",
 	"textinformation":"Kyklos, a cycle tracking app created in 2022 by doctors, is :<br>• usable by any woman<br>• specially adapted for pubescent or pre-pubescent girls<br>• is usable offline (data internal to the application)<br>• confidential: no link to any tracking site, server or database; does NOT disclose anydata to third parties without the user's knowledge*. N.B. For the greatest possibleconfidentiality in the digital sphere of this intimate health data, it is preferable to sendPDFs of cycles via Bluetooth or encrypted messaging, and to archive them on apersonal hard drive rather than in the Cloud.<br>• Free of charge<br>*with no source of revenue! Keep it on the stores with a donation, thank you!(<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a> \"help us\" tab).<br><br><u>Fundamentals:</u> Drs G.D., B.deN., A.J., and other, doctors and facilitators at CEPP/TeenSTAR<br>France<br><u>Design, layout and coordination:</u> A.J.<br><u>Illustrations</u>: Inès de Chefdebien (Paris)<br><u>Contact</u>: app@teenstar.fr<br><i>All rights reserved<i>",
-	"insert" : "insert"
+    "bienvenuesurkyklos": "Welcome to Kyklos",
+"settings": "Settings",
+"account": "Account",
+"username": "Username",
+"year_of_first_period": "Year of first period",
+"date_of_birth": "Date of birth",
+"language": "Language",
+"theme": "Theme",
+"sky_blue": "SKY BLUE",
+"coral": "CORAL",
+"edit": "Edit",
+"reset_application": "Reset application",
+"reminder_notification": "Reminder notification",
+"on": "on",
+"off": "off",
+"other": "Other",
+"basic": "_guide,Basic guide",
+"advanced_guide": "Advanced guide",
+"app_info": "App info",
+"edit_profile": "Edit profile",
+"username": "Username",
+"year_of_first_period": "Year of first period",
+"date_of_birth": "Date of birth dd.mm.yyyy",
+"optional_fields": "*Optional fields",
+"edit": "Edit",
+"warning_delete_account": "Warning! Are you sure you want to delete your account?",
+"cancel": "Cancel",
+"delete": "Delete",
+"all_your_records_will_be_permanently_deleted": "All your records will be permanently deleted!",
+"cancel": "Cancel",
+"delete_all": "Delete all",
+"do_you_want_to_continue_the_current_cycle": "Do you want to continue the current cycle?",
+"new_cycle": "New cycle",
+"continue_cycle": "Continue cycle ...",
+"new_observation_cycle": "New observation - Cycle ...",
+"date": "Date :",
+"today": "Today",
+"sensation": "SENSATION",
+"d_letter_in_icon": "D (letter in icon)",
+"dry_legend_icon_d": "Dry (legend icon D)",
+"h": "H",
+"humid": "Humid",
+"w": "W",
+"wet": "Wet",
+"l": "L",
+"slippery_lubricated": "Slippery/Lubricated",
+"np": "np",
+"not_perceived": "Not perceived",
+"other_sensation": "Other sensation",
+"blood": "BLOOD",
+"flow_pp": "Flow ++",
+"flow_p": "Flow +",
+"traces": "Traces",
+"nothing": "Nothing",
+"mucus": "MUCUS",
+"white_or_yellow_opaque": "White or yellow opaque; thick pasty or lumpy; sticky (non-stretchable)",
+"opaque_with_transparency": "Opaque with transparency; somewhat stretchable",
+"cloudy_to_transparent": "Cloudy (white) to transparent; elastic",
+"stringy_transparent": "Stringy transparent (~egg white) or very fluid (~water)",
+"no_visible_mucus": "No visible mucus",
+"dried_white_or_yellow_deposit": "Dried white or yellow deposit",
+"other_observation": "Other observation",
+"mood": "MOOD",
+"very_good": "Very good",
+"good": "Good",
+"no_particular_emotion_balanced": "No particular emotion balanced",
+"desire_to_be_undisturbed": "Desire to be undisturbed",
+"mood_swings": "Mood swings",
+"nervous_irritable": "Nervous irritable",
+"sadness_discouragement_hypersensitivity": "Sadness Discouragement Hypersensitivity",
+"other": "Other",
+"other_mood": "Other mood",
+"associated_sign": "ASSOCIATED SIGN",
+"bt": "BT",
+"breast_tension": "Breast tension",
+"bp": "BP",
+"belly_pain": "Belly pain",
+"ha": "HA",
+"headache": "Headache",
+"ac": "Ac",
+"acne": "Acne",
+"event": "EVENT",
+"fatigue": "Fatigue",
+"stress": "Stress",
+"personal_1": "Personal 1",
+"personal_2": "Personal 2",
+"travel_unusual_schedules": "Travel; unusual schedules",
+"illness_or_fever": "Illness or fever",
+"other_note": "Other note",
+"other_note": "Other note",
+"temperature": "TEMPERATURE",
+"cycle": "Cycle",
+"display_analysis": "Display analysis",
+"d_day_1_etc": "'D (pour Day 1 etc)'",
+"jan": "jan.",
+"feb": "feb.",
+"march": "march",
+"apr": "apr.",
+"may": "may",
+"june": "june",
+"july": "july",
+"aug": "aug.",
+"sept": "sept",
+"oct": "oct",
+"nov": "nov",
+"dec": "dec",
+"date": "Date",
+"colour": "Colour",
+"analysis": "Analysis",
+"sensation": "Sensation",
+"blood": "Blood",
+"mucus": "Mucus",
+"mood": "Mood",
+"event": "Event",
+"observation_of_the_day": "Observation of the day",
+"observation_of_d": "Observation of D ...",
+"tuesday": "Tuesday",
+"wednesday": "Wednesday",
+"thursday": "Thursday",
+"friday": "Friday",
+"saturday": "Saturday",
+"sunday": "Sunday",
+"read": "notes,Read notes",
+"mark_as_peak_day": "mark as peak day",
+"change_colour": "Change colour",
+"mark_1": "Mark 1",
+"mark_2": "Mark 2",
+"mark_3": "Mark 3",
+"delete": "Delete '?'",
+"modify_daily_observation": "Modify daily observation",
+"cancel_peak_day": "Cancel peak day",
+"cancel_colour": "Cancel colour",
+"cancel_marking": "Cancel marking",
+"delete_observation": "Delete observation",
+"cancel": "Cancel",
+"choose_colour": "Choose colour",
+"do_you_really_want_to_delete_this_observation": "Do you really want to delete this observation?",
+"cancel": "Cancel",
+"observation_of_date": "Observation of (date)",
+"other_observation": "Other observation",
+"other_mucus": "Other mucus",
+"other_event": "Other event",
+"other_mood": "Other mood",
+"export_as_pdf": "Export as PDF",
+"analyse_group_cycle": "Analyse group Cycle ...",
+"touch_the_lines_to_be_analysed": "Touch the lines to be analysed",
+"cancel": "Cancel",
+"analyse": "Analyse",
+"analyse_observations": "Analyse (nombre de lignes sélectionnées) observations",
+"change_colour": "Change colour",
+"mark_infertile": "Mark infertile",
+"delete_point_interrogation": "Delete '?'",
+"cancel_colour": "Cancel colour",
+"cancel_infertile": "Cancel infertile",
+"cancel_all_analysis": "Cancel all analysis",
+"do_you_really_want_to_delete_all_interpretations_made_on_this_cycle": "Do you really want to delete all interpretations made on this cycle?",
+"cancel": "Cancel",
+"delete_all": "Delete all",
+"delete_cycle": "Delete cycle ...",
+"history": "History",
+"resend_cycle_3_to_2": "Resend cycle 3 to 2",
+"maximum_cycles_at_a_time": "Maximum 15 cycles at a time",
+"from_cycle": "From cycle ...",
+"to_cycle": "to cycle ...",
+"export_as_pdf": "Export as PDF",
+"from_cycle": "From cycle ...",
+"to_cycle": "to cycle ...",
+"fp_abbreviation_for_1st_period": "FP (= abbreviation for '1st period')",
+"date": "Date",
+"colour": "Colour",
+"analysis": "Analysis",
+"sensation": "Sensation",
+"blood": "Blood",
+"mucus": "Mucus",
+"mood": "Mood",
+"temperature": "Temperature",
+"event": "Event",
+"cycle_comments": "Cycle (numéro du cycle) comments",
+"day": "Day",
+"date": "Date",
+"comments": "Comments",
+    "insert":"insert"
 }
