--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -75,13 +75,13 @@
 "on": "on",
 "off": "off",
 "other": "Other",
-"basic": "_guide,Basic guide",
+"basic_guide": "Basic guide",
 "advanced_guide": "Advanced guide",
 "app_info": "App info",
 "edit_profile": "Edit profile",
 "username": "Username",
 "year_of_first_period": "Year of first period",
-"date_of_birth": "Date of birth dd.mm.yyyy",
+"date_of_birth_dd": "Date of birth dd.mm.yyyy",
 "optional_fields": "*Optional fields",
 "edit": "Edit",
 "warning_delete_account": "Warning! Are you sure you want to delete your account?",
@@ -92,8 +92,8 @@
 "delete_all": "Delete all",
 "do_you_want_to_continue_the_current_cycle": "Do you want to continue the current cycle?",
 "new_cycle": "New cycle",
-"continue_cycle": "Continue cycle ...",
-"new_observation_cycle": "New observation - Cycle ...",
+"continue_cycle": "Continue cycle ",
+"new_observation_cycle": "New observation - Cycle ",
 "date": "Date :",
 "today": "Today",
 "sensation": "SENSATION",
@@ -148,11 +148,10 @@
 "travel_unusual_schedules": "Travel; unusual schedules",
 "illness_or_fever": "Illness or fever",
 "other_note": "Other note",
-"other_note": "Other note",
 "temperature": "TEMPERATURE",
 "cycle": "Cycle",
 "display_analysis": "Display analysis",
-"d_day_1_etc": "'D (pour Day 1 etc)'",
+"d_day_1_etc": "D",
 "jan": "jan.",
 "feb": "feb.",
 "march": "march",
@@ -174,7 +173,7 @@
 "mood": "Mood",
 "event": "Event",
 "observation_of_the_day": "Observation of the day",
-"observation_of_d": "Observation of D ...",
+"observation_of_d": "Observation of D ",
 "tuesday": "Tuesday",
 "wednesday": "Wednesday",
 "thursday": "Thursday",
@@ -203,11 +202,11 @@
 "other_event": "Other event",
 "other_mood": "Other mood",
 "export_as_pdf": "Export as PDF",
-"analyse_group_cycle": "Analyse group Cycle ...",
+"analyse_group_cycle": "Analyse group Cycle ",
 "touch_the_lines_to_be_analysed": "Touch the lines to be analysed",
 "cancel": "Cancel",
 "analyse": "Analyse",
-"analyse_observations": "Analyse (nombre de lignes sélectionnées) observations",
+"observation": "observation",
 "change_colour": "Change colour",
 "mark_infertile": "Mark infertile",
 "delete_point_interrogation": "Delete '?'",
@@ -217,15 +216,15 @@
 "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle": "Do you really want to delete all interpretations made on this cycle?",
 "cancel": "Cancel",
 "delete_all": "Delete all",
-"delete_cycle": "Delete cycle ...",
+"delete_cycle": "Delete cycle ",
 "history": "History",
 "resend_cycle_3_to_2": "Resend cycle 3 to 2",
 "maximum_cycles_at_a_time": "Maximum 15 cycles at a time",
-"from_cycle": "From cycle ...",
-"to_cycle": "to cycle ...",
+"from_cycle": "From cycle ",
+"to_cycle": "to cycle ",
 "export_as_pdf": "Export as PDF",
-"from_cycle": "From cycle ...",
-"to_cycle": "to cycle ...",
+"from_cycle": "From cycle ",
+"to_cycle": "to cycle ",
 "fp_abbreviation_for_1st_period": "FP (= abbreviation for '1st period')",
 "date": "Date",
 "colour": "Colour",
@@ -240,5 +239,10 @@
 "day": "Day",
 "date": "Date",
 "comments": "Comments",
+"path_advanded_guide": "assets/html/guide_avance_en.html",
+"path_basic_guide": "assets/html/guide_de_base_en.html",
+"path_guide_pdf": "assets/guide_en.pdf",
+"sky": "Sky",
+"pink": "Pink",
     "insert":"insert"
 }
