--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -72,13 +72,13 @@
     "on":"activé",
     "off":"désactivé",
     "other":"Autre",
-    "basic":"_guide,Principes de base",
+    "basic_guide":"Principes de base",
     "advanced_guide":"Guide avancé",
     "app_info":"Info sur l'application",
     "edit_profile":"Modifier le profil",
     "username":"Nom d'utilisateur",
     "year_of_first_period":"Année des 1eres règles",
-    "date_of_birth":"Date de naissance jj.mm.aaaa",
+    "date_of_birth_dd":"Date de naissance jj.mm.aaaa",
     "optional_fields":"*Champs optionnels",
     "edit":"Modifier",
     "warning_delete_account":"Attention ! Êtes vous sûre de vouloir supprimer votre compte ?",
@@ -89,8 +89,8 @@
     "delete_all":"Tout effacer",
     "do_you_want_to_continue_the_current_cycle":"Voulez-vous continuer le cycle en cours?",
     "new_cycle":"Nouveau cycle",
-    "continue_cycle":"Continuer cycle ...",
-    "new_observation_cycle":"Nouvelle observation - Cycle ...",
+    "continue_cycle":"Continuer cycle ",
+    "new_observation_cycle":"Nouvelle observation - Cycle",
     "date":"Date :",
     "today":"Aujourd'hui",
     "sensation":"SENSATION",
@@ -145,11 +145,10 @@
     "travel_unusual_schedules":"Voyage; horaires inhabituels",
     "illness_or_fever":"Maladie ou fièvre",
     "other_note":"Autre note",
-    "other_note":"Autre note (champ our écrire)",
     "temperature":"TEMPéRATURE",
     "cycle":"Cycle",
     "display_analysis":"Afficher analyse",
-    "d_day_1_etc":"J (pour Jour 1 Jour 2 etc)",
+    "d_day_1_etc":"J",
     "jan":"janv.",
     "feb":"fév.",
     "march":"mars",
@@ -171,7 +170,7 @@
     "mood":"Humeur (entête de colonne)",
     "event":"Evénement (entête de colonne)",
     "observation_of_the_day":"Observation de la journée (bouton bas d'écran Cycles)",
-    "observation_of_d":"Observation du J ...",
+    "observation_of_d":"Observation du J ",
     "tuesday":"Mardi",
     "wednesday":"Mercredi",
     "thursday":"Jeudi",
@@ -200,11 +199,11 @@
     "other_event":"Autre événement",
     "other_mood":"Autre humeur",
     "export_as_pdf":"Exporter en PDF",
-    "analyse_group_cycle":"Analyse groupée Cycle... ( numéro du cycle)",
+    "analyse_group_cycle":"Analyse groupée Cycle ( numéro du cycle)",
     "touch_the_lines_to_be_analysed":"Toucher les lignes à analyser",
     "cancel":"Annuler",
     "analyse":"Analyser",
-    "analyse_observations":"Analyser (chiffre nombre de lignes sélectionnées) observations",
+    "observation": "observation",
     "change_colour":"Modifier couleur",
     "mark_infertile":"Marquer infertile",
     "delete_point_interrogation":"Effacer le '?'",
@@ -218,11 +217,11 @@
     "history":"Historique",
     "resend_cycle_3_to_2":"Renvoyer cycle 3 vers 2",
     "maximum_cycles_at_a_time":"Maximum 15 cycles à la fois",
-    "from_cycle":"Du cycle ...",
-    "to_cycle":"au cycle ...",
+    "from_cycle":"Du cycle ",
+    "to_cycle":"au cycle ",
     "export_as_pdf":"Exporter en PDF",
-    "from_cycle":"du cycle ...",
-    "to_cycle":"au cycle ...",
+    "from_cycle":"du cycle ",
+    "to_cycle":"au cycle ",
     "fp_abbreviation_for_1st_period":"PR (abréviation de '1ere règles', après l'année de naissance)",
     "date":"Date  (entête de colonne)",
     "colour":"Couleur (entête de colonne)",
@@ -233,9 +232,14 @@
     "mood":"Humeur (entête de colonne)",
     "temperature":"Température",
     "event":"Evénement (entête de colonne)",
-    "cycle_comments":"Commentaires du cycle ... (en réalité c'est plutôt dans le sens de 'Notes')",
+    "cycle_comments":"Commentaires du cycle  (en réalité c'est plutôt dans le sens de 'Notes')",
     "day":"Jour",
     "date":"Date",
     "comments":"Commentaires",
+    "path_advanded_guide": "assets/html/guide_avance_en.html",
+    "path_basic_guide": "assets/html/guide_de_base_en.html",
+    "path_guide_pdf": "assets/guide.pdf",
+    "sky": "Ciel",
+    "pink": "Corail",
     "insert":"insert"
 }
