--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -244,5 +244,36 @@
 "path_guide_pdf": "assets/guide_en.pdf",
 "sky": "Sky",
 "pink": "Pink",
-    "insert":"insert"
+"medication":"medication",
+"reset_password":"Reset password",
+"i_have_read_and_accept_the_terms_and_conditions_of_use":"I have read and accept the terms and conditions of use",
+"you_must_accept_the_terms_of_use":"You must accept the terms of use",
+"enter_the_password":"Enter the password",
+"go_to":"Go to",
+"please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually":"Please note that this date already exists in the previous cycle. You will have to delete the duplicate manually",
+"please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Please note that a comment already exists for this date. Would you like to replace it ?",
+"replace":"Replace",
+"please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Please note that the days of the previous cycle after the date of this observation will be carried over to this new cycle. Would you like to confirm?",
+"reporting_observations":"Reporting observations",
+"notes_confidential":"Notes Confidential",
+"summary_analysis_of_cycle_":"Summary / Analysis of cycle ",
+"to_cycle":"to cycle",
+"choose_a_cycle":"Choose a cycle",
+"no_cycle_to_be_exported_in_these_terminals":"No cycle to be exported in these terminals",
+"read_the_notes":"Read the notes",
+"observation_of":"Observation of",
+"delete_observation_of_the_day":"Delete observation of the day",
+"other_pain":"Other pain",
+"no_note":"No note",
+"confidential_notes":"Confidential notes",
+"would_you_like_to_add_a_comment_for_the":"Would you like to add a comment for the",
+"add":"Add",
+"all_your_recordings_will_be_permanently_deleted":"All your recordings will be permanently deleted",
+"erase_all":"Erase all",
+"activate_notifications_to_receive_alerts_and_reminders":"Activate notifications to receive alerts and reminders",
+"notifications_are_scheduled":"Notifications are scheduled",
+"no_notification_scheduled":"No notification scheduled",
+"schedule_a_reminder":"Schedule a reminder",
+"cancel_all_reminders":"Cancel all reminders",
+"insert":"insert"
 }
