--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -241,5 +241,36 @@
     "path_guide_pdf": "assets/guide.pdf",
     "sky": "Ciel",
     "pink": "Corail",
+    "medication":"medicament",
+    "reset_password":"Reinitialiser le mot de passe",
+    "i_have_read_and_accept_the_terms_and_conditions_of_use":"J'ai lu et j'accepte les \nconditions d'utilisation",
+    "you_must_accept_the_terms_of_use":"Vous devez accepter les conditions d'utilisation",
+    "enter_the_password":"Entrez le mot de passe",
+    "go_to":"Accéder",
+    "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually":"Attention cette date existe déjà dans le cycle précédent. Vous devrez supprimer manuellement le doublon",
+    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Attention: une observation existe déjà pour cette date. voulez-vous la remplacer ?",
+    "replace":"Remplacer",
+    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm?":"Attention les journées du Cycle précédant situées après la date de cette observation vont être reportées a ce nouveau cycle. Voulez vous confirmer ?",
+    "reporting_observations":"Reporter les observations",
+    "notes_confidential":"*Notes Confidentielle*",
+    "summary_analysis_of_cycle_":"Résumé / Analyse du cycle",
+    "to_cycle":"au cycle",
+    "choose_a_cycle":"Choisir un cycle",
+    "no_cycle_to_be_exported_in_these_terminals":"Aucun cycle à exporter dans ces bornes",
+    "read_the_notes":"Lire les notes",
+    "observation_of":"Observation du",
+    "delete_observation_of_the_day":"Supprimer observation du jour",
+    "other_pain":"Autre douleur",
+    "no_note":"Pas de note",
+    "confidential_notes":"Notes confidentielles",
+    "would_you_like_to_add_a_comment_for_the":"Voulez-vous ajouter une observation pour le",
+    "add":"Ajouter",
+    "all_your_recordings_will_be_permanently_deleted":"Tous vos enregistrements seront définitivement effacés",
+    "erase_all":"Tout effacer",
+    "activate_notifications_to_receive_alerts_and_reminders":"Activer les notifications pour recevoir des alertes et des rappels",
+    "notifications_are_scheduled":"Les notifications sont programmées",
+    "no_notification_scheduled":"Aucune notification programmée",
+    "schedule_a_reminder":"Me programmer un rappel",
+    "cancel_all_reminders":"Annuler tous les rappels",
     "insert":"insert"
 }
