--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -55,7 +55,7 @@
     "jailulespoints":"J’ai lu les points ci-dessus et j’ai compris que cette application m’aidera à enregistrer mes observations quotidiennes au cours des cycles menstruels, mais ne peut absolument pas me suffire telle quelle pour éviter (ou favoriser) une grossesse. Je comprends que si tel était mon objectif, je devrais impérativement suivre une formation approfondie avec une monitrice spécialisée en méthode naturelle de régulation des naissances.",
 	"etape":"Etape",
 	"principeutilisation":"Principe d'utilisation",
-    "textinformation":"Cette application créée en 2020 par des médecins est :<br>",
+    "textinformation":"Information :<br>Kyklos, une application de suivi du cycle créée en 2022 par des médecins, présente les caractéristiques suivantes :<br>• Utilisable par n'importe quelle femme<br>• Spécialement adaptée aux filles pubères ou pré-pubères<br>• Utilisable hors ligne (données internes à l'application)<br>• Confidentielle : aucune connexion à un site de suivi, serveur ou base de données ; NE divulgue AUCUNE donnée à des tiers sans la connaissance de l'utilisateur*. N.B. Pour une confidentialité maximale dans la sphère numérique de ces données de santé intimes, il est préférable d'envoyer des PDF des cycles via Bluetooth ou messagerie chiffrée, et de les archiver sur un disque dur personnel plutôt que dans le Cloud.<br>• Gratuite<br>*Sans source de revenus ! Maintenez-la sur les magasins avec un don, merci ! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, onglet \"Aidez-nous\").<br><br><u>Fondements</u> : Drs G.D., B.deN., A.J. et d'autres, médecins et facilitateurs au CEPP/TeenSTAR France<br><u>Conception, mise en page et coordination</u> : A.J.<br><u>Illustrations</u> : Inès de Chefdebien (Paris)<br><u>Contact</u> : app@teenstar.fr<br><i>Tous droits réservés</i>",
     "bienvenuesurkyklos":"Bienvenue sur Kyklos",
     "settings":"Réglages",
     "account":"Compte",
@@ -94,8 +94,8 @@
     "date":"Date :",
     "today":"Aujourd'hui",
     "sensation":"SENSATION",
-    "d_letter_in_icon":"S (lettre dans icone)",
-    "dry_legend_icon_d":"Sec (légende icone S)",
+    "d_letter_in_icon":"S",
+    "dry_legend_icon_d":"Sec",
     "h":"H",
     "humid":"Humide",
     "w":"M",
@@ -129,8 +129,8 @@
     "other":"Autre",
     "other_mood":"Autre humeur",
     "associated_sign":"SIGNE ASSOCIE",
-    "bt":"DS (lettres dans l'icone)",
-    "breast_tension":"Tension seins (légende icone DS)",
+    "bt":"DS",
+    "breast_tension":"Tension seins",
     "bp":"DV",
     "belly_pain":"Douleur ventre",
     "ha":"MT",
@@ -161,15 +161,15 @@
     "oct":"oct",
     "nov":"nov",
     "dec":"déc",
-    "date":"Date  (entête de colonne)",
-    "colour":"Couleur (entête de colonne)",
-    "analysis":"Analyse (ent^te de colonne)",
-    "sensation":"Sensation (entête de colonne)",
-    "blood":"Sang (entête de colonne)",
-    "mucus":"Mucus (entête de colonne)",
-    "mood":"Humeur (entête de colonne)",
-    "event":"Evénement (entête de colonne)",
-    "observation_of_the_day":"Observation de la journée (bouton bas d'écran Cycles)",
+    "date":"Date  ",
+    "colour":"Couleur ",
+    "analysis":"Analyse ",
+    "sensation":"Sensation ",
+    "blood":"Sang ",
+    "mucus":"Mucus ",
+    "mood":"Humeur ",
+    "event":"Evénement ",
+    "observation_of_the_day":"Observation de la journée",
     "observation_of_d":"Observation du J ",
     "tuesday":"Mardi",
     "wednesday":"Mercredi",
@@ -189,17 +189,17 @@
     "cancel_colour":"Annuler couleur",
     "cancel_marking":"Annuler marquage",
     "delete_observation":"Supprimer l'observation",
-    "cancel":"Annuler (bouton en bas du menu)",
+    "cancel":"Annuler",
     "choose_colour":"Choisir une couleur",
     "do_you_really_want_to_delete_this_observation":"Voulez-vous vraiment supprimer cette observation ?",
     "cancel":"Annuler",
-    "observation_of_date":"Observation du (date)",
+    "observation_of_date":"Observation du ",
     "other_observation":"Autre observation",
     "other_mucus":"Autre mucus",
     "other_event":"Autre événement",
     "other_mood":"Autre humeur",
     "export_as_pdf":"Exporter en PDF",
-    "analyse_group_cycle":"Analyse groupée Cycle ( numéro du cycle)",
+    "analyse_group_cycle":"Analyse groupée Cycle ",
     "touch_the_lines_to_be_analysed":"Toucher les lignes à analyser",
     "cancel":"Annuler",
     "analyse":"Analyser",
@@ -213,7 +213,7 @@
     "do_you_really_want_to_delete_all_interpretations_made_on_this_cycle":"Voulez-vous vraiment effacer toute l'interprétation faite sur ce cycle ?",
     "cancel":"Annuler",
     "delete_all":"Effacer tout",
-    "delete_cycle":"Effacer cycle (numéro du cycle)",
+    "delete_cycle":"Effacer cycle ",
     "history":"Historique",
     "resend_cycle_3_to_2":"Renvoyer cycle 3 vers 2",
     "maximum_cycles_at_a_time":"Maximum 15 cycles à la fois",
@@ -222,17 +222,17 @@
     "export_as_pdf":"Exporter en PDF",
     "from_cycle":"du cycle ",
     "to_cycle":"au cycle ",
-    "fp_abbreviation_for_1st_period":"PR (abréviation de '1ere règles', après l'année de naissance)",
-    "date":"Date  (entête de colonne)",
-    "colour":"Couleur (entête de colonne)",
-    "analysis":"Analyse (entête de colonne)",
-    "sensation":"Sensation (entête de colonne)",
-    "blood":"Sang (entête de colonne)",
-    "mucus":"Mucus (entête de colonne)",
-    "mood":"Humeur (entête de colonne)",
+    "fp_abbreviation_for_1st_period":"PR",
+    "date":"Date  ",
+    "colour":"Couleur ",
+    "analysis":"Analyse ",
+    "sensation":"Sensation ",
+    "blood":"Sang ",
+    "mucus":"Mucus ",
+    "mood":"Humeur ",
     "temperature":"Température",
-    "event":"Evénement (entête de colonne)",
-    "cycle_comments":"Commentaires du cycle  (en réalité c'est plutôt dans le sens de 'Notes')",
+    "event":"Evénement ",
+    "cycle_comments":"Commentaires du cycle ",
     "day":"Jour",
     "date":"Date",
     "comments":"Commentaires",
